--- a/workflow/action-hello-world.yml
+++ b/workflow/action-hello-world.yml
@@ -1,10 +1,12 @@
 name: 'Hello World'
 
 on:
+
   push:
     branches: none # [main]
   pull_request:
     branches: none # [main]
+  workflow_dispatch:
 jobs:
   build container:
     runs-on: "ubuntu-latest" 
