correcy line 13 at yml file

--- a/.github/workflows/action-hello-world.yml
+++ b/.github/workflows/action-hello-world.yml
@@ -7,8 +7,10 @@ on:
   pull_request:
     branches: none # [main]
   workflow_dispatch:
+
+
 jobs:
-  build container:
+  build-container:
     runs-on: "ubuntu-latest" 
     steps:
       - name: Checkout
