--- a/.github/workflows/action-hello-world.yml
+++ b/.github/workflows/action-hello-world.yml
@@ -47,11 +47,11 @@ jobs:
         id: meta
         uses: docker/metadata-action@v2
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ env.IMAGE_TAG}}
 
       - name: Push image
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$IMAGE_TAG
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/{{ env.IMAGE_NAME }:${{ env.IMAGE_TAG}}
           #tags: ${{ steps.meta.outputs.tags }}
           #labels: ${{ steps.meta.outputs.labels }}
 
