--- a/.github/workflows/action-hello-world-short.yml
+++ b/.github/workflows/action-hello-world-short.yml
@@ -17,8 +17,8 @@ jobs:
      username: ${{ github.actor }}
      password: ${{ secrets.GITHUB_TOKEN }}
   - name: Build the hello-docker Docker image
-    working-directory: ./Meir-Dir
+    #working-directory: ./Meir-Dir
     run: |
-       docker build . --file ./Meir-Dir/Dockerfile --tag ghcr.io/meirmany/git-action-flow-hello:latest
+       docker build . --file Dockerfile --tag ghcr.io/meirmany/git-action-flow-hello:latest
        docker run ghcr.io/meirmany/git-action-flow-hello:latest
        docker push ghcr.io/meirmany/git-action-flow-hello:latest
