--- a/.github/workflows/action-hello-world bck.yml
+++ b/.github/workflows/action-hello-world bck.yml
@@ -55,7 +55,10 @@ jobs:
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG}}
           echo "still good2"
           echo "still good3"
-          echo "still good3.1"
+          #tags: ${{ steps.meta.outputs.tags }}
+          #labels: ${{ steps.meta.outputs.labels }}
+          # Change all uppercase to lowercase
+          echo "still good3"
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           echo "still good4"
           # Strip git ref prefix from version
