--- a/.github/workflows/action-hello-world.yml
+++ b/.github/workflows/action-hello-world.yml
@@ -54,6 +54,7 @@ jobs:
           echo "still good1"
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG}}
           echo "still good2"
+          echo $IMAGE_ID
           echo "still good3"
           echo "still good3.1"
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
