update git tag with registry

--- a/.github/workflows/action-hello-world.yml
+++ b/.github/workflows/action-hello-world.yml
@@ -24,8 +24,9 @@ jobs:
       - name: Build the Docker image
         id: phase1
         working-directory: Meir-Dir
-        run: docker build . --file Dockerfile --tag $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-
+        run: |
+          docker build . --file Dockerfile --tag $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+          docker images
 
 
   build-push-docker:
