--- a/.github/workflows/action-hello-world.yml
+++ b/.github/workflows/action-hello-world.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  REPOSITORY: meirmany
   IMAGE_NAME: git-action-flow-hello
   IMAGE_TAG: 1.0.${{ github.run_number}}
 
@@ -25,7 +26,7 @@ jobs:
         id: phase1
         working-directory: Meir-Dir
         run: |
-          docker build . --file Dockerfile --tag $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+          docker build . --file Dockerfile --tag $REGISTRY/$REPOSITORY/$IMAGE_NAME:$IMAGE_TAG
           docker images
 
 
