update git tag with registry

--- a/.github/workflows/action-hello-world.yml
+++ b/.github/workflows/action-hello-world.yml
@@ -75,5 +75,6 @@ jobs:
           #docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           #docker tag $IMAGE_NAME $IMAGE_ID
           #docker push $IMAGE_ID:$VERSION
+          docker images
           docker run $IMAGE_ID
           docker push $IMAGE_ID
